[project]
name = "nonebot-plugin-alipayvoice"
version = "0.5.0"
description = "An alipay voice plugin for NoneBot2"
authors = [
    {name = "Akirami", email = "Akiramiaya@outlook.com"},
]
license-expression = "MIT"
dependencies = ["nonebot2>=2.0.0b2", "nonebot-adapter-onebot>=2.0.0b1", "cn2an>=0.5.17"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/A-kirami/nonebot-plugin-answersbook"
Repository = "https://github.com/A-kirami/nonebot-plugin-answersbook"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
